--- a/Exercises/vidly/package.json
+++ b/Exercises/vidly/package.json
@@ -10,7 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.16.2",
-    "joi": "^13.1.0"
+    "fawn": "^2.1.5",
+    "joi": "^13.1.0",
+    "joi-objectid": "^4.0.2",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
+    "mongoose": "^6.7.0"
   }
 }
